# SE

./: .gitignore
Sudoku/: CMakeLists.txt  Sudoku  compile.sh  coverage.sh  main.cpp  run.sh  sudoku.cpp  test.sh
Sudoku/Inc/: board.h  sudoku.h
Sudoku/src/: board.cpp  sudoku.cpp
